<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:stackFromBottom="true"
        app:layout_constraintBottom_toTopOf="@id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/output"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list" />

    <TextView
        android:id="@+id/output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:filterTouchesWhenObscured="false"
        android:foregroundGravity="fill"
        app:columnCount="4"
        app:columnOrderPreserved="false"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/output"
        app:rowCount="6">

        <Button
            android:id="@+id/button_dot"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dot"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="5"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_del"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/del"
            app:layout_column="2"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="5"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_0"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_0"
            app:layout_column="1"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="5"
            app:layout_rowWeight="1"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button_1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_1"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_3"
            app:layout_column="2"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_2"
            app:layout_column="1"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_4"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_div"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/div"
            app:layout_column="3"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_eq"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/eq"
            app:layout_column="3"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowSpan="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_6"
            app:layout_column="2"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_5"
            app:layout_column="1"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_mul"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/mul"
            app:layout_column="3"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_8"
            app:layout_column="1"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_9"
            app:layout_column="2"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_plus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/plus"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_parenthesis_l"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/phl"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_parenthesis_r"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/phr"
            app:layout_column="1"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_pow"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/pow"
            app:layout_column="2"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_7"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_minus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/re"
            app:layout_column="1"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_root"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/root"
            app:layout_column="2"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_divrem"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/divrem"
            app:layout_column="3"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_clear"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foregroundGravity="fill"
            android:text="@string/cl"
            app:layout_column="3"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>